--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,7 @@ body {
     background-image: url(../img/trama.png);
     background-size: contain;
     background-repeat: repeat;
+    background-position: center center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -130,46 +131,66 @@ body {
 
         height: 100vh;
         .main-form{
-
-        
-            .form {
-                    height: 100vh;
+           .h1-form{font-size: 45px;
+                @media (max-width:762px){font-size: 28px;}
+        }
+           .form-container{
                     display: flex;
                     justify-content: center;
-                    color: white;
-                    background-color: black;
-                    opacity: .8;
-                    border: 2px solid red;
-                    border-radius: 15px;
-                    margin: 15px;
-                    padding: 25px;
-                    @media(max-width: 762px){
-                        width: auto;
-                        height: auto;
-
-                    }
-                    ul {
-                        justify-content: center;
-                        list-style: none;
-                        button {
+                    align-items: center;
+                    
+                    .form {
+                            height: 20rem;
+                            width: 35rem;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
                             color: white;
-                            background-color: rgb(77, 77, 77);
-                            border: 1px solid red;
+                            background-color: black;
+                            opacity: .8;
+                            border: 2px solid red;
                             border-radius: 15px;
-                            padding: 5px 10px;
-                            box-shadow: rgb(77, 77, 77)  0 0 10px;
-                        }
-                        li{
-                            margin: 10px 10px;
-                            label {
-                                margin: 6px 16px;
+                            margin: 15px;
+                            padding: 25px;
+                            @media(max-width: 762px){
+                                width: auto;
+                                height: auto;
 
                             }
-                        }
-                    
-                    }       
+                            ul {
+                                justify-content: center;
+                                list-style: none;
+                                button {
+                                    color: white;
+                                    background-color: rgb(77, 77, 77);
+                                    border: 1px solid red;
+                                    border-radius: 15px;
+                                    padding: 5px 10px;
+                                    box-shadow: rgb(77, 77, 77)  0 0 10px;
+                                }
+                                li{
+                                    margin: 10px 10px;
+                                    label {
+                                        margin: 6px 16px;
+
+                                    }
+                                }
+                            
+                            }       
+                    }
             }
-        
+            .footer-form{
+                width: 69.5%;
+                position: absolute;
+                bottom: 0;
+                text-align: center;
+                @media (max-width: 762px){
+                    font-size: 14px;
+                }
+                    
+                
+
+            }
         }            
 
 
