--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'DEMON_NI';
-  src: url(../fontdemon/DEMON_NI.TTF); }
+  font-family: 'Cattedrale';
+  src: url(../fontdemon/Cattedrale.ttf); }
 
 * {
   margin: 0;
@@ -47,19 +47,19 @@ body {
     width: 70%;
     height: 100%; }
     body main header {
-      font-family: DEMON_NI;
+      font-family: Cattedrale;
       display: flex;
       flex-direction: column;
       letter-spacing: 5px; }
       body main header h1 {
-        font-size: 65px;
+        font-size: 85px;
         margin: 10px;
         text-align: left; }
         @media (max-width: 762px) {
           body main header h1 {
-            font-size: 45px; } }
+            font-size: 40px; } }
       body main header h2 {
-        font-size: 40px;
+        font-size: 55px;
         margin: 10px;
         text-align: right; }
         @media (max-width: 762px) {
