--- a/css/style.css
+++ b/css/style.css
@@ -54,14 +54,16 @@ body {
       body main header h1 {
         font-size: 85px;
         margin: 10px;
-        text-align: left; }
+        text-align: left;
+        text-shadow: #e758e7 0 0 15px; }
         @media (max-width: 762px) {
           body main header h1 {
             font-size: 40px; } }
       body main header h2 {
         font-size: 55px;
         margin: 10px;
-        text-align: right; }
+        text-align: right;
+        text-shadow: #e758e7 0 0 15px; }
         @media (max-width: 762px) {
           body main header h2 {
             font-size: 28px; } }
@@ -211,5 +213,5 @@ body {
     text-align: center; }
     @media (max-width: 762px) {
       .body-form .main-form .footer-form {
-        font-size: 14px;
+        font-size: 18px;
         width: 68%; } }
